# hotel-booking-voice-agent

./: .gitignore  README.md
brain/: client.py  pyproject.toml
brain/data/: hotel_policies.txt
brain/src/: agent.py  main.py  rag.py  tools.py
brain/src/proto/: service_pb2.py  service_pb2_grpc.py
brain/tests/: test_rag.py  test_tools.py
docs/: architecture.md  implementation_plan.md  phase1.md  phase2.md  phase3.md  phase4.md
gateway/: go.mod  go.sum
gateway/cmd/server/: main.go
gateway/internal/cache/: redis.go  redis_test.go
gateway/internal/cartesia/: stt.go  tts.go
gateway/internal/db/: db.go  repository.go  repository_test.go
gateway/internal/grpc/: client.go  server.go
gateway/internal/payments/: xendit.go
gateway/internal/ws/: gateway.go
gateway/proto/: service.pb.go  service.proto  service_grpc.pb.go
web/: pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: CheckoutModal.tsx  VoiceOverlay.tsx
web/src/hooks/: useAudioStream.ts  useWebSocket.ts
web/src/pages/: AdminDashboard.tsx  GuestPortal.tsx
